RESOLVED FIXED34162
[Android] [Qt] Touch event page co-ordinates are incorrect when touch is received in an iframe.
https://bugs.webkit.org/show_bug.cgi?id=34162
Summary [Android] [Qt] Touch event page co-ordinates are incorrect when touch is rece...
Ben Murdoch
Reported 2010-01-26 05:05:17 PST
The pageX/pageY co-ordinates in a touch should be relative to the containing frame. If the target element is in an iframe, the code currently does not readjust the page co-ordinates to be relative to that iframe but leaves them relative to the main frame. Patch and test to follow. The patch also renames a variable in the Android specific code to more clearly reflect it's contents.
Attachments
Proposed patch and updated test. (10.42 KB, patch)
2010-01-26 05:15 PST, Ben Murdoch
no flags
Proposed patch and updated test. (12.85 KB, patch)
2010-01-26 10:20 PST, Ben Murdoch
hausmann: review+
commit-queue: commit-queue-
Ben Murdoch
Comment 1 2010-01-26 05:15:50 PST
Created attachment 47405 [details] Proposed patch and updated test.
Ben Murdoch
Comment 2 2010-01-26 10:20:22 PST
Created attachment 47420 [details] Proposed patch and updated test. This patch additionally removes some dead code.
WebKit Commit Bot
Comment 3 2010-01-28 02:29:22 PST
Comment on attachment 47420 [details] Proposed patch and updated test. Rejecting patch 47420 from commit-queue. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 Last 500 characters of output: int.h M WebCore/platform/android/PlatformTouchEventAndroid.cpp M WebCore/platform/android/PlatformTouchPointAndroid.cpp A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following ChangeLog files contain OOPS: trunk/LayoutTests/ChangeLog Please don't ever say "OOPS" in a ChangeLog file. at /usr/local/git/libexec/git-core/git-svn line 558 Full output: http://webkit-commit-queue.appspot.com/results/215684
Ben Murdoch
Comment 4 2010-01-28 02:50:46 PST
My bad, I have a duplicate entry in the change log. Will remove and land manually.
Ben Murdoch
Comment 5 2010-01-28 03:31:41 PST
Landed as r53994.
Aurélio Santos
Comment 6 2013-10-18 08:28:42 PDT
This problem is still occurring to me in some webkit browsers when a CSS transition is applied to the iframe element. The browsers that I tested and saw this problem still happening are: iOS5 Safari Mobile. Webkit version: 534.46 iOS6 Safari Mobile. Webkit version: 536.26 Android 4.0.3 stock browser. Webkit version: 534.30 Tizen Browser. Webkit version: 537.3 Could there have been a regression?
Aurélio Santos
Comment 7 2013-10-18 09:16:09 PDT
I have created a simple test to show this problem happening on the specified browsers: http://jsfiddle.net/aurhe/kQ8P4/3/embedded/result/
Note You need to log in before you can comment on or make changes to this bug.