WebCore/dom/Touch.h
@@ -45,9 +45,6 @@ public:
                 screenY, pageX, pageY));
     }
 
-    void updateLocation(int screenX, int screenY, int pageX, int pageY);
-
-    Frame* frame() const { return m_frame.get(); }
     EventTarget* target() const { return m_target.get(); }
     unsigned identifier() const { return m_identifier; }
     int clientX() const { return m_clientX; }
@@ -61,7 +58,6 @@ private:
     Touch(Frame* frame, EventTarget* target, unsigned identifier,
             int screenX, int screenY, int pageX, int pageY);
 
-    RefPtr<Frame> m_frame;
     RefPtr<EventTarget> m_target;
     unsigned m_identifier;
     int m_clientX;
