WebCore/platform/android/PlatformTouchEventAndroid.cpp
@@ -30,14 +30,14 @@
 
 namespace WebCore {
 
-PlatformTouchEvent::PlatformTouchEvent(const IntPoint& absolutePagePos, TouchEventType type, PlatformTouchPoint::State state)
+PlatformTouchEvent::PlatformTouchEvent(const IntPoint& windowPos, TouchEventType type, PlatformTouchPoint::State state)
     : m_type(type)
     , m_ctrlKey(false)
     , m_altKey(false)
     , m_shiftKey(false)
     , m_metaKey(false)
 {
-    m_touchPoints.append(PlatformTouchPoint(absolutePagePos, state));
+    m_touchPoints.append(PlatformTouchPoint(windowPos, state));
 }
 
 }
