WebCore/platform/android/PlatformTouchPointAndroid.cpp
@@ -30,11 +30,11 @@
 
 namespace WebCore {
 
-PlatformTouchPoint::PlatformTouchPoint(const IntPoint& absolutePagePos, State state)
+PlatformTouchPoint::PlatformTouchPoint(const IntPoint& windowPos, State state)
     : m_id(0)
     , m_state(state)
-    , m_screenPos(absolutePagePos)
-    , m_pos(absolutePagePos) { }
+    , m_screenPos(windowPos)
+    , m_pos(windowPos) { }
 
 }
 
